--- a/DataAccessLibrary/DataAccessLibrary.csproj
+++ b/DataAccessLibrary/DataAccessLibrary.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115" />
   </ItemGroup>
 
 </Project>
